--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
   "devDependencies": {
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
+    "@types/mongodb": "^3.6.18",
     "@types/node": "^15.6.2",
     "@types/supertest": "^2.0.11",
     "jest": "^27.0.3",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.2",
+    "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
   },
   "dependencies": {
     "express": "^4.17.1",
+    "mongodb": "^3.6.9",
+    "qs": "^6.10.1",
     "runtypes": "^6.3.0",
     "yaml": "^1.10.2"
   }
