get list filtering to useable state

--- a/src/fixtures/schemas/user.yaml
+++ b/src/fixtures/schemas/user.yaml
@@ -6,3 +6,10 @@ properties:
   age:
     type: Integer
     required: true
+  score:
+    type: Integer
+  config:
+    type: object
+    properties:
+      nickname:
+        type: string
