--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eighty",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.ts",
   "scripts": {
     "test": "jest --detectOpenHandles ."
   },
