--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/index.ts",
   "scripts": {
-    "test": "jest --detectOpenHandles ."
+    "test": "jest --detectOpenHandles --runInBand ."
   },
   "keywords": [],
   "author": "",
@@ -24,6 +24,7 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
+    "deepclone": "^1.0.2",
     "express": "^4.17.1",
     "fast-json-patch": "^3.0.0-1",
     "jsonschema": "^1.4.0",
