--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/index.ts",
   "scripts": {
-    "test": "jest --detectOpenHandles --runInBand ."
+    "test": "jest --detectOpenHandles --coverage ."
   },
   "keywords": [],
   "author": "",
