--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "license": "ISC",
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.2.5",
+    "@types/combinations": "^1.0.0",
     "@types/express": "^4.17.12",
     "@types/fast-json-patch": "^1.1.5",
     "@types/jest": "^26.0.23",
     "@types/mongodb": "^3.6.18",
     "@types/node": "^15.6.2",
     "@types/supertest": "^2.0.11",
+    "combinations": "^1.0.0",
+    "deepmerge": "^4.2.2",
     "jest": "^27.0.3",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.2",
@@ -29,6 +32,7 @@
     "fast-json-patch": "^3.0.0-1",
     "jsonschema": "^1.4.0",
     "mongodb": "^3.6.9",
+    "openapi-types": "^9.0.3",
     "qs": "^6.10.1",
     "runtypes": "^6.3.0",
     "yaml": "^1.10.2"
