--- a/demo/book.yaml
+++ b/demo/book.yaml
@@ -1,17 +1,18 @@
+type: object
 properties:
   title:
     type: string
-    required: true
   pages:
     type: number
-    required: true
   author:
-    required: false
     type: object
     properties:
       name:
         type: string
-        required: true
       age:
         type: number
-        required: false
+    required:
+      - name
+required:
+  - title
+  - pages
