--- a/demo/demo.yaml
+++ b/demo/demo.yaml
@@ -1,8 +1,24 @@
 version: "1.0.0"
 
+name: Books API
+
 database:
   type: mongodb
 
 resources:
   - name: book
-    schemaPath: ./book.yaml
+    schemaPath: ./demo/book.yaml
+    operations:
+      list:
+        authentication: false
+      getOne:
+        authorization:
+          allOf:
+            - type: isResource
+      replace:
+        authentication: true
+        authorization:
+          anyOf:
+            - type: hasRole
+              role: admin
+            - type: isOwner
