--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/mongodb": "^3.6.18",
     "@types/node": "^15.6.2",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4.1.3",
     "combinations": "^1.0.0",
     "deepmerge": "^4.2.2",
     "jest": "^27.0.3",
@@ -35,6 +36,7 @@
     "openapi-types": "^9.0.3",
     "qs": "^6.10.1",
     "runtypes": "^6.3.0",
+    "swagger-ui-express": "^4.1.6",
     "yaml": "^1.10.2"
   },
   "jest": {
