implement onSuccess callback feature

--- a/src/fixtures/schemas/user.yaml
+++ b/src/fixtures/schemas/user.yaml
@@ -8,6 +8,10 @@ properties:
     required: true
   score:
     type: number
+  interests:
+    type: array
+    items:
+      type: string
   config:
     type: object
     properties:
