--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^15.6.2",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^8.3.1",
     "combinations": "^1.0.0",
     "deepmerge": "^4.2.2",
     "jest": "^27.0.3",
@@ -37,6 +38,7 @@
     "qs": "^6.10.1",
     "runtypes": "^6.3.0",
     "swagger-ui-express": "^4.1.6",
+    "uuid": "^8.3.2",
     "yaml": "^1.10.2"
   },
   "jest": {
