--- a/demo/demo.yaml
+++ b/demo/demo.yaml
@@ -7,7 +7,7 @@ database:
 
 resources:
   - name: book
-    schemaPath: ./demo/book.yaml
+    schemaPath: ./demo/book.ts
     operations:
       list:
         authentication: false
@@ -15,6 +15,8 @@ resources:
         authorization:
           allOf:
             - type: isResource
+      create:
+        authentication: false
       replace:
         authentication: true
         authorization:
