--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "qs": "^6.10.1",
     "runtypes": "^6.3.0",
     "swagger-ui-express": "^4.1.6",
+    "typescript-json-schema": "^0.50.1",
     "uuid": "^8.3.2",
     "yaml": "^1.10.2"
   },
