--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "./src/index.ts",
   "scripts": {
-    "test": "jest --detectOpenHandles --coverage ."
+    "test": "jest --detectOpenHandles --coverage .",
+    "build": "tsc -p ./tsconfig.json"
   },
   "keywords": [],
   "author": "",
