--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eighty",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.ts",
+  "main": "./dist/index.js",
   "scripts": {
     "test": "jest --detectOpenHandles --coverage .",
     "build": "tsc -p ./tsconfig.json"
