just dont document bracket style query filters for now

--- a/src/demo/demo.yaml
+++ b/src/demo/demo.yaml
@@ -7,7 +7,7 @@ database:
 
 resources:
   - name: book
-    schemaPath: ./demo/book.ts
+    schemaPath: ./src/demo/book.ts
     operations:
       list:
         authentication: false
